--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Hugo Doria <hugo@archlinux.org>
 
 pkgname=bzr
-pkgver=1.6
+pkgver=1.6.1
 pkgrel=1
 pkgdesc="A decentralized revision control system"
 arch=('i686' 'x86_64')
 url="http://www.bazaar-vcs.org"
 license=('GPL')
 depends=('python')
-source=(http://launchpad.net/bzr/1.6/1.6/+download/${pkgname}-${pkgver}.tar.gz)
-md5sums=('28161a7356846aecf485c10950ba8af6')
+source=(http://launchpad.net/bzr/1.6/${pkgver}/+download/${pkgname}-${pkgver}.tar.gz)
+md5sums=('84b73e5b52c6b58887b02987849cdbc9')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
