--- a/libtool/trunk/PKGBUILD
+++ b/libtool/trunk/PKGBUILD
@@ -1,21 +1,25 @@
 # $Id$
 # Maintainer: judd <jvinet@zeroflux.org>
 pkgname=libtool
-pkgver=2.2.4
+pkgver=2.2.6a
 pkgrel=1
 pkgdesc="A generic library support script"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnu.org/software/libtool"
+install=libtool.install
 groups=('base-devel')
 depends=('sh' 'tar')
 source=(ftp://ftp.gnu.org/pub/gnu/libtool/${pkgname}-${pkgver}.tar.gz)
-md5sums=('0b87e84c7aad3b5e979bbe35312fd4c1')
+md5sums=('8ca1ea241cd27ff9832e045fe9afe4fd')
 options=('!libtool')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  #cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${startdir}/src/${pkgname}-2.2.6
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=${startdir}/pkg install
+
+  rm -f ${pkgdir}/usr/share/info/dir
 }
