--- a/swfdec/trunk/PKGBUILD
+++ b/swfdec/trunk/PKGBUILD
@@ -1,24 +1,22 @@
 #$Id$
-#Maintainer: Jan de Groot <jgc@archlinux.org>
+#Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=swfdec
-pkgver=0.6.8
+pkgver=0.8.0
 pkgrel=1
 pkgdesc="free library for decoding and rendering Flash animations"
 arch=('i686' 'x86_64')
 url="http://swfdec.freedesktop.org"
 license=('LGPL')
-depends=('gstreamer0.10-base>=0.10.19' 'ffmpeg>=20080625' 'alsa-lib>=1.0.16' 'liboil>=0.3.14'
-	 'libmad>=0.15.1b-2' 'gtk2>=2.12.9' 'libsoup>=2.4.0')
+depends=('gstreamer0.10-base>=0.10.20' 'alsa-lib>=1.0.17a' 'liboil>=0.3.14' 'gtk2>=2.12.11-3' 'libsoup>=2.4.1-2')
 makedepends=('pkgconfig')
-source=(http://swfdec.freedesktop.org/download/swfdec/0.6/${pkgname}-${pkgver}.tar.gz)
-md5sums=('740caf52068556ffe151703342fb634b')
+source=(http://swfdec.freedesktop.org/download/swfdec/0.8/${pkgname}-${pkgver}.tar.gz)
+md5sums=('ce3002fc5d8ace9ce34ce960c0cc3c06')
 options=('!libtool' '!emptydirs')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  FFMPEG_CFLAGS="-I/usr/include/libavcodec -I/usr/include/libswscale"   ./configure --prefix=/usr --disable-static --enable-gtk \
-	--enable-mad --enable-ffmpeg --disable-gnome-vfs \
+  ./configure --prefix=/usr --disable-static --enable-gtk \
 	--enable-gstreamer --enable-soup --with-audio=alsa
   make || return 1
   make DESTDIR=${startdir}/pkg install
