--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 # Contributor: Renchi Raju <renchi@green.tam.uiuc.edu>
 pkgname=emacs
-pkgver=22.2
-pkgrel=2
+pkgver=22.3
+pkgrel=1
 pkgdesc="The Emacs Editor"
 arch=(i686 x86_64)
 url="http://www.gnu.org/software/emacs/emacs.html"
@@ -11,7 +11,7 @@ license=('GPL')
 options=(docs)
 depends=('ncurses' 'libpng' 'libtiff' 'giflib' 'libxpm' 'gtk2' 'texinfo')
 source=(ftp://ftp.gnu.org/gnu/emacs/$pkgname-$pkgver.tar.gz emacs.install emacs.desktop)
-md5sums=('d6ee586b8752351334ebf072904c4d51' 'e7b3e355fc60d535c792dbd2ae9fc2df'\
+md5sums=('aa8ba34f548cd78b35914ae5a7bb87eb' 'e7b3e355fc60d535c792dbd2ae9fc2df'\
          '8af038d2ba4561271e935bb444ceb4e3')
 install=emacs.install
 
@@ -20,6 +20,7 @@ build() {
   mandir=/usr/share/man
   ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
   --localstatedir=/var --mandir=${mandir} --without-sound -with-x-toolkit=gtk
+  make || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
   # remove conflict with ctags package
