--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -32,6 +32,12 @@ build() {
   find $startdir/pkg/usr/share/emacs/$pkgver -type d -exec chmod 755 {} \;
   # fix user/root permissions on usr/share files
   find $startdir/pkg/usr/share/emacs/$pkgver -exec chown root.root {} \;
+  # fix perms on /var/games
+  chmod 775 ${startdir}/pkg/var/games
+  chmod 775 ${startdir}/pkg/var/games/emacs
+  chmod 664 ${startdir}/pkg/var/games/emacs/*
+  chown -R root:50 ${startdir}/pkg/var/games
+
 
   # remove info dir
   rm $startdir/pkg/usr/share/info/dir
