upgpkg: gimp-dbp 1.1.8-1     added license
git-svn-id: file:///srv/repos/svn-packages/svn@12077 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gimp-dbp/trunk/PKGBUILD
+++ b/gimp-dbp/trunk/PKGBUILD
@@ -9,6 +9,7 @@ pkgver=$(echo ${_dlver} | sed 's/-/./g')
 pkgrel=1
 pkgdesc="David's batch processor for the GIMP"
 arch=(i686 x86_64)
+license=('GPL')
 depends=('gimp>=2.4')
 url="http://members.ozemail.com.au/~hodsond/dbp.html"
 source=(http://www.ozemail.com.au/~hodsond/${_srcname}Src-${_dlver}.tgz)
