--- a/wireshark/trunk/PKGBUILD
+++ b/wireshark/trunk/PKGBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Hugo Doria <hugo@archlinux.org>
 
 pkgname=wireshark
-pkgver=1.0.2
-pkgrel=2
+pkgver=1.0.3
+pkgrel=1
 pkgdesc="A free network protocol analyzer for Unix/Linux and Windows"
 arch=('i686' 'x86_64')
 license=('GPL2')
 depends=('gtk2>=2.12.11' 'heimdal>=1.2' 'libpcap>=0.9.8' 'bash' 'gnutls>=2.4.1' 'libcap')
+makedepends=('bison' 'flex')
 url="http://www.wireshark.org/"
 replaces=('ethereal')
 options=(!libtool)
 source=(http://www.wireshark.org/download/src/${pkgname}-${pkgver}.tar.gz)
-md5sums=('6045048aa8645d54d1a06bb20e0d23a3')
+md5sums=('a52b0c6c652ce7239bee879cd6ca02f0')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
