--- a/enblend/trunk/PKGBUILD
+++ b/enblend/trunk/PKGBUILD
@@ -3,23 +3,25 @@
 # Contributor: Dominik Ryba <domryba@post.pl>
 
 pkgname=enblend
-pkgver=3.0
-pkgrel=3
+_pkgname=enblend-enfuse
+pkgver=3.2
+pkgrel=1
 pkgdesc="intelligent blend tool for overlapping picture"
 arch=("i686" "x86_64")
 license=('GPL')
-depends=('libtiff' 'glew>=1.5' 'libxmi' 'freeglut' 'libgl' 'lcms')
+depends=('openexr' 'glew>=1.5' 'libxmi' 'freeglut' 'libgl' 'lcms')
 makedepends=('boost')
-source=(http://dl.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz
+source=(http://dl.sourceforge.net/sourceforge/${pkgname}/${_pkgname}-${pkgver}.tar.gz
         enblend-3.0-amd64_compilation.patch)
 url="http://enblend.sourceforge.net"
-md5sums=('f80a12ff91a6122c5ea0d102443929da' 'b14bf09229298f59a9aed8e503b3e183')
+md5sums=('9b6ebaf672f5103c633a53c9723d99c3' 'b14bf09229298f59a9aed8e503b3e183')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  if [ "$CARCH" = "x86_64" ]; then
-    patch -Np0 -i ../enblend-3.0-amd64_compilation.patch || return 1
-  fi
+  cd ${startdir}/src/${_pkgname}-${pkgver}
+  # NOTE to 64 rebuilder: patch is now upstream
+  #if [ "$CARCH" = "x86_64" ]; then
+  #  patch -Np0 -i ../enblend-3.0-amd64_compilation.patch || return 1
+  #fi
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=${startdir}/pkg install
