--- a/texlive-publishers/trunk/PKGBUILD
+++ b/texlive-publishers/trunk/PKGBUILD
@@ -10,9 +10,9 @@ depends=('texlive-core')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
-md5sums=('fdaefed532edad4fca3072e12628f307')
+md5sums=('3f6c02944c6b88c50a90a2f44dd0e506')
 
 build() {
    cd $startdir/src
