--- a/texlive-latex3/trunk/PKGBUILD
+++ b/texlive-latex3/trunk/PKGBUILD
@@ -10,7 +10,7 @@ depends=('texlive-core')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('4586f9e1250ed6c9f990b9e0c9e3a3f5')
 
