--- a/texlive-latexextra/trunk/PKGBUILD
+++ b/texlive-latexextra/trunk/PKGBUILD
@@ -11,7 +11,7 @@ optdepends=('texlive-pictures')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('a7a20603f343ae6910ca33137fda8ce8')
 
