--- a/texlive-plainextra/trunk/PKGBUILD
+++ b/texlive-plainextra/trunk/PKGBUILD
@@ -10,7 +10,7 @@ depends=('texlive-core')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('4a1c24a25de83b5b9fa38cdd418ef33c')
 
