--- a/texlive-science/trunk/PKGBUILD
+++ b/texlive-science/trunk/PKGBUILD
@@ -10,7 +10,7 @@ depends=('texlive-core')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('e583fd9985cef508b2e4c4e4ea59b89a')
 
