--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,16 +6,14 @@ pkgrel=1
 pkgdesc="TeX Live binaries"
 license=('GPL')
 arch=('i686' 'x86_64')
-depends=('xorg-server' 't1lib' 'gd' 'perl')
-optdepends=('psutils' 't1utils')
+depends=('gcc-libs' 't1lib' 'gd' 'libsigsegv')
+optdepends=('psutils' 't1utils' 'xorg-server' 'perl')
 makedepends=('flex' 'bison' 'clisp' 'ffcall' 'gcc' 'lzma-utils')
-# add t1utils to provides and conflicts?
 conflicts=('texlive-omega')
 options=('!makeflags' '!libtool')
 url='http://tug.org/texlive/'
 source=('texmf.cnf' 'ftp://tug.org/texlive/historic/2008/texlive-20080816-source.tar.lzma' \
-	'http://dev.archlinux.org/~francois/src/texlive-bin-2008-texmf.tar.lzma')
-# TODO: create symlinks to /etc/texlive/ for those files??
+	'ftp://ftp.archlinux.org/other/texlive/texlive-bin-2008-texmf.tar.lzma')
 backup=(usr/share/texmf/web2c/texmf.cnf \
 	usr/share/texmf-config/web2c/mktex.cnf \
 	usr/share/texmf-config/web2c/updmap.cfg \
@@ -86,6 +84,9 @@ build() {
  #############################################################
  ## CLEAN UP... 
    echo "Cleaning up"
+   # remove tlmgr from PATH
+   rm -f $startdir/pkg/usr/bin/tlmgr
+
    for d in $startdir/pkg/usr/texmf/scripts/*; do
 	   dname=`basename $d`
 	   test ! -d $startdir/pkg/usr/share/texmf/scripts/$dname && mv $d $startdir/pkg/usr/share/texmf/scripts/
