--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,7 +12,7 @@ depends=('texlive-latexextra')
 makedepends=('lzma-utils')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('784f89ae42ae4af3ee93c1336e205413')
 
