--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ depends=('texlive-core')
 makedepends=('lzma-utils')
 groups=('texlive-lang')
 url='http://tug.org/texlive/'
-source=("http://dev.archlinux.org/~francois/src/$pkgname-src.zip")
+source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
 md5sums=('55d1fe0385b3ef592a9a861276fdc11b')
 
