prepare next build to fix #11426, move gstreamer to optdepends
git-svn-id: file:///srv/repos/svn-packages/svn@12113 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/swfdec/trunk/PKGBUILD
+++ b/swfdec/trunk/PKGBUILD
@@ -8,8 +8,10 @@ pkgdesc="free library for decoding and rendering Flash animations"
 arch=('i686' 'x86_64')
 url="http://swfdec.freedesktop.org"
 license=('LGPL')
-depends=('gstreamer0.10-base>=0.10.20' 'alsa-lib>=1.0.17a' 'liboil>=0.3.14' 'gtk2>=2.12.11-3' 'libsoup>=2.4.1-2')
-makedepends=('pkgconfig')
+depends=('alsa-lib>=1.0.17a' 'liboil>=0.3.14' 'gtk2>=2.12.11-3' 'libsoup>=2.4.1-2')
+makedepends=('pkgconfig' 'gstreamer0.10-ffmpeg')
+optdepends=('gstreamer0.10-base:	required for various audio and video formats'
+            'gstreamer0.10-ffmpeg:	most common audio/video format for internet flash')
 source=(http://swfdec.freedesktop.org/download/swfdec/0.8/${pkgname}-${pkgver}.tar.gz)
 md5sums=('ce3002fc5d8ace9ce34ce960c0cc3c06')
 options=('!libtool' '!emptydirs')
