--- a/libkexif/trunk/PKGBUILD
+++ b/libkexif/trunk/PKGBUILD
@@ -8,6 +8,7 @@ pkgdesc="library for manipulating EXIF information"
 arch=(i686 x86_64)
 url="http://digikam.sourceforge.net"
 depends=('kdelibs' 'libexif')
+license=('GPL2')
 source=(http://heanet.dl.sourceforge.net/sourceforge/kipi/$pkgname-$pkgver.tar.bz2)
 
 build() {
