--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Hugo Doria <hugo@archlinux.org>
 
 pkgname=nmap
-pkgver=4.68
-pkgrel=3
+pkgver=4.75
+pkgrel=1
 pkgdesc="A network exploration tool and security/port scanner"
 arch=('i686' 'x86_64')
 url="http://nmap.org"
@@ -11,10 +11,10 @@ license=('custom:GPL')
 depends=('pcre' 'openssl' 'libpcap>=0.9.8' 'lua')
 # python is needed for zenmap
 makedepends=('python')
-optdepends=('pygtk')
+optdepends=('pygtk: gui for nmap')
 options=('!makeflags')
 source=(http://download.insecure.org/nmap/dist/${pkgname}-${pkgver}.tgz)
-md5sums=('a1373c992e4b21d8db4d65c6eb8fec42')
+md5sums=('85d160ccaaa848fcf415681e3349d848')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
