--- a/libogg/trunk/PKGBUILD
+++ b/libogg/trunk/PKGBUILD
@@ -10,12 +10,18 @@ pkgurl="http://www.xiph.org/ogg/vorbis/download"
 depends=('glibc')
 source=(http://downloads.xiph.org/releases/ogg/$pkgname-$pkgver.tar.gz)
 md5sums=('eaf7dc6ebbff30975de7527a80831585')
+arch=('i686' 'x86_64')
+license=('BSD')
+options=(!libtool)
 
 build() {
   cd $startdir/src/${pkgname}-${pkgver}
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install
-  find $startdir/pkg -name '*.la' -exec rm {} \;
+
+# install BSD license
+install -Dm644 $srcdir/$pkgname-$pkgver/COPYING \
+	$pkgdir/usr/share/licenses/$pkgname/COPYING
 }
 
