--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,6 +9,9 @@ depends=('zlib')
 source=(ftp://ftp.mars.org/pub/mpeg/$pkgname-$pkgver.tar.gz id3tag.pc)
 url="http://www.underbit.com/products/mad/"
 md5sums=('e5808ad997ba32c498803822078748c3' 'cd5ea001dc24505040b781ad1de9ddf2')
+arch=('i686' 'x86_64')
+license=('GPL')
+options=(!libtool)
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
@@ -16,5 +19,4 @@ build() {
   make || return 1
   make DESTDIR=$startdir/pkg install
   install -D -m644 $startdir/src/id3tag.pc $startdir/pkg/usr/lib/pkgconfig/id3tag.pc
-  find $startdir/pkg -name '*.la' -exec rm {} \;
 }
