--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,6 +12,7 @@ depends=('glibc')
 makedepends=('python')
 source=(http://dl.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2)
 md5sums=('b8fff9f3d121531bc17430e3f4ea6ed0')
+license=('GPL2')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
