--- a/libmusepack/trunk/PKGBUILD
+++ b/libmusepack/trunk/PKGBUILD
@@ -8,6 +8,8 @@ pkgdesc="Musepack decoding library"
 depends=('glibc')
 source=(http://www.saunalahti.fi/grimmel/musepack.net-files/source/libmusepack-$pkgver.tar.bz2)
 url="http://musepack.net/"
+arch=('i686' 'x86_64')
+license=('custom')
 md5sums=('C06AA1DA054ED79989CD71D5300ED7C5')
 
 build() {
@@ -15,4 +17,8 @@ build() {
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
+
+# install custom license
+install -Dm644 $srcdir/$pkgname-$pkgver/COPYING	\
+	$pkgdir/usr/share/licenses/$pkgname/COPYING
 }
