--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,10 +8,12 @@ pkgrel=1
 pkgdesc="The Quasar DV codec (libdv) is a software codec for DV video"
 depends=('popt')
 makedepends=('pkgconfig' 'gtk')
-source=(http://dl.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('f895162161cfa4bb4a94c070a7caa6c7')
+source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
 url="http://libdv.sourceforge.net/"
-options=('NOLIBTOOL')
+options=('!libtool')
+arch=('i686' 'x86_64')
+license=('LGPL')
+md5sums=('f895162161cfa4bb4a94c070a7caa6c7')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
