--- a/startup-notification/trunk/PKGBUILD
+++ b/startup-notification/trunk/PKGBUILD
@@ -6,14 +6,20 @@ pkgrel=1
 pkgdesc="Monitor and display application startup"
 arch=(i686 x86_64)
 depends=('libx11' 'libsm')
-options=('nolibtool')
+options=('!libtool')
 url="http://www.freedesktop.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('624b42f1fac5a12c543a079e2cd3b366')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.bz2 'bsdlicense')
+license=('LGPL2' 'BSD')
+md5sums=('624b42f1fac5a12c543a079e2cd3b366'
+         'dec57091fe278b9192abecc6a5cec5ca')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   ./configure --prefix=/usr --localstatedir=/var --sysconfdir=/etc
   make || return 1
   make DESTDIR=${startdir}/pkg install
+
+# install BSD license
+install -Dm644 $srcdir/bsdlicense \
+	$pkgdir/usr/share/licenses/$pkgname/bsdlicense
 }
