--- a/libmemcache/trunk/PKGBUILD
+++ b/libmemcache/trunk/PKGBUILD
@@ -9,11 +9,17 @@ url="http://people.freebsd.org/~seanc/libmemcache/"
 depends=('glibc')
 source=(http://people.freebsd.org/~seanc/libmemcache/$pkgname-$pkgver.tar.bz2)
 md5sums=('402c957cd71538c07a263542eeb513d1')
+options=(!libtool)
+arch=('i686' 'x86_64')
+license=('custom')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install
-  find $startdir/pkg -name '*.la' -exec rm {} \;
+
+# install custom license
+install -Dm644 $srcdir/$pkgname-$pkgver/COPYING \
+	$pkgdir/usr/share/licenses/$pkgname/COPYING
 }
