--- a/lesstif/trunk/PKGBUILD
+++ b/lesstif/trunk/PKGBUILD
@@ -9,7 +9,8 @@ pkgrel=2
 pkgdesc="LGPL'd re-implementation of Motif"
 arch=(i686 x86_64)
 depends=('freetype2' 'libxt' 'libxp')
-options=('nolibtool')
+options=('!libtool')
+license=('GPL2' 'LGPL2')
 source=(http://heanet.dl.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2
 	CAN-2005-0605.patch
 	64bitcleanups.patch
