--- a/pypgsql/trunk/PKGBUILD
+++ b/pypgsql/trunk/PKGBUILD
@@ -5,13 +5,19 @@ pkgver=2.5.1
 pkgrel=4
 pkgdesc="A python client library for postgresql"
 arch=(i686 x86_64)
-license=('CNRI')
+license=('custom')
 url="http://pypgsql.sourceforge.net/"
-depends=('python-egenix-mx-base>=2.0.6-3' 'postgresql-libs>=8.2.3')
-source=(http://heanet.dl.sourceforge.net/sourceforge/${pkgname}/pyPgSQL-${pkgver}.tar.gz)
-md5sums=('82670f6f1652aa4766fdaec2cb43debd')
+#depends=('python-egenix-mx-base>=2.0.6-3' 'postgresql-libs>=8.2.3')
+source=(http://downloads.sourceforge.net/${pkgname}/pyPgSQL-${pkgver}.tar.gz
+	'COPYING')
+md5sums=('82670f6f1652aa4766fdaec2cb43debd'
+         '3d01558c4f8439cdbd94eaf00c2c42ec')
 
 build() {
   cd ${startdir}/src/pyPgSQL-${pkgver} || return 1
   python setup.py install --root=${startdir}/pkg || return 1
+
+# install custom license
+install -Dm644 $srcdir/COPYING \
+	$pkgdir/usr/share/licenses/$pkgname/COPYING
 }
