--- a/mplayer/trunk/PKGBUILD
+++ b/mplayer/trunk/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=mplayer
 pkgver=1.0rc2
-pkgrel=6
+pkgrel=7
 pkgdesc="A movie player for linux"
 arch=(i686 x86_64)
 depends=('libxxf86dga' 'libxv' 'libmad' 'giflib' 'cdparanoia' 'gtk2'
-         'sdl' 'lame' 'libtheora' 'xvidcore'
+         'sdl' 'lame' 'libtheora' 'xvidcore' 'libungif' 'zlib'
          'libgl' 'smbclient' 'aalib' 'jack-audio-connection-kit'
          'x264>=20080625' 'faac' 'lirc-utils' 'ttf-dejavu')
 license=('GPL')
@@ -29,7 +29,7 @@ md5sums=('7e27e535c2d267637df34898f1b91707'
 	 '1ef35068587f6b6dbc99342567895236')
 
 build() {
-  cd $startdir/src/MPlayer-${pkgver}
+  cd ${srcdir}/MPlayer-${pkgver}
 
   # Custom CFLAGS break the mplayer build
   unset CFLAGS
@@ -45,7 +45,7 @@ build() {
     patch -p0 -i ../${p}
   done
   
-  cd $startdir/src/MPlayer-${pkgver}
+  cd ${srcdir}/MPlayer-${pkgver}
 
   ./configure --prefix=/usr --enable-gui --disable-arts --enable-x11 \
       --enable-runtime-cpudetection --confdir=/etc/mplayer --disable-nas \
@@ -54,14 +54,14 @@ build() {
       --disable-fribidi --disable-libdv --disable-musepack \
       --language=all --disable-dvdnav --disable-esd --disable-mga \
       --disable-libamr_nb \
-      --with-extraincdir=/usr/lib/live-media
+      --with-extraincdir=/usr/lib/live-media --enable-enca
 
   [ "$CARCH" = "i686" ] &&  sed 's|-march=i486|-march=i686|g' -i config.mak
 
   make || return 1
-  make -j1 DESTDIR=${startdir}/pkg install
-  cp etc/{codecs.conf,input.conf,example.conf} ${startdir}/pkg/etc/mplayer/
-  ln -s /usr/share/fonts/TTF/DejaVuSans.ttf ${startdir}/pkg/usr/share/mplayer/subfont.ttf
-  rm -rf ${startdir}/pkg/usr/share/mplayer/font
-  mv ${startdir}/src/Blue ${startdir}/pkg/usr/share/mplayer/skins/default
+  make -j1 DESTDIR=${pkgdir} install
+  cp etc/{codecs.conf,input.conf,example.conf} ${pkgdir}/etc/mplayer/
+  ln -s /usr/share/fonts/TTF/DejaVuSans.ttf ${pkgdir}/usr/share/mplayer/subfont.ttf
+  rm -rf ${pkgdir}/usr/share/mplayer/font
+  mv ${srcdir}/Blue ${pkgdir}/usr/share/mplayer/skins/default
 }
