--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Contributor: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-fontsextra
 pkgver=2008.10427
@@ -21,11 +21,11 @@ build() {
 	   lzma --force -dc $p | tar xf - || return 1
    done
    install -m755 -d $startdir/pkg/usr/share || return 1
-   find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
-   find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || return 1
+   find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || return 1
    
    # remove stuff depending on omega
-   rm -rf $startdir/usr/share/texmf-dist/omega
-   find $startdir -wholename '*ocherokee*' -delete
-   find $startdir -wholename '*oinuit*' -delete
+   rm -rf $startdir/pkg/usr/share/texmf-dist/omega
+   find $startdir/pkg/ -wholename '*ocherokee*' -delete
+   find $startdir/pkg/ -wholename '*oinuit*' -delete
 }
