--- a/texlive-langcyrillic/trunk/PKGBUILD
+++ b/texlive-langcyrillic/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Contributor: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-langcyrillic
 pkgver=2008
@@ -12,7 +12,7 @@ groups=('texlive-lang')
 url='http://tug.org/texlive/'
 source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
-md5sums=('3e2be1b7873bf044ae2beb96da8fcdea')
+md5sums=('c7843d01a243f14ae13c241fcfc13ec0')
 
 build() {
    cd $startdir/src
