--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Contributor: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-humanities
 pkgver=2008.10432
