fixed Maintainer tags
git-svn-id: file:///srv/repos/svn-packages/svn@12135 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texlive-langgreek/trunk/PKGBUILD
+++ b/texlive-langgreek/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Contributor: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-langgreek
 pkgver=2008
