--- a/texlive-genericextra/trunk/PKGBUILD
+++ b/texlive-genericextra/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Contributor: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-genericextra
 pkgver=2008
