--- a/enblend-enfuse/trunk/PKGBUILD
+++ b/enblend-enfuse/trunk/PKGBUILD
@@ -23,4 +23,5 @@ build() {
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=${startdir}/pkg install
+  rm -f ${startdir}/pkg/usr/share/info/dir
 }
