add missing rev nos to pkgver; add conflicts=tetex
git-svn-id: file:///srv/repos/svn-packages/svn@12151 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texlive-core/trunk/PKGBUILD
+++ b/texlive-core/trunk/PKGBUILD
@@ -12,6 +12,7 @@ makedepends=('lzma-utils')
 groups=('texlive-most')
 conflicts=('tetex')
 provides=('tetex')
+replaces=('tetex')
 url='http://tug.org/texlive/'
 source=("http://dev.archlinux.org/~francois/texlive/src/$pkgname-src.zip")
 install=texlive.install
