--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,6 +12,7 @@ makedepends=('lzma-utils')
 groups=('texlive-most')
 conflicts=('tetex')
 provides=('tetex')
+replaces=('tetex')
 url='http://tug.org/texlive/'
 source=("http://dev.archlinux.org/~francois/texlive/src/$pkgname-src.zip")
 install=texlive.install
