install texmf-dist only
git-svn-id: file:///srv/repos/svn-packages/svn@12189 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texlive-htmlxml/trunk/PKGBUILD
+++ b/texlive-htmlxml/trunk/PKGBUILD
@@ -20,6 +20,7 @@ build() {
 	   lzma --force -dc $p | tar xf - || return 1
    done
    install -m755 -d $startdir/pkg/usr/share || return 1
-   find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
-   find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   find texmf-dist -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
+   find texmf-dist -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   # remove scripts already provided by texlive-bin
 }
