--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=udev
 pkgver=127
-pkgrel=ed
+pkgrel=1
 pkgdesc="The userspace dev tools (udev)"
 arch=(i686 x86_64)
 url="http://www.kernel.org/pub/linux/utils/kernel/hotplug/udev.html"
