--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=udev
-pkgver=127
+pkgver=128
 pkgrel=1
 pkgdesc="The userspace dev tools (udev)"
 arch=(i686 x86_64)
@@ -24,9 +24,9 @@ options=(!makeflags)
 source=(http://www.kernel.org/pub/linux/utils/kernel/hotplug/$pkgname-$pkgver.tar.bz2
         81-arch.rules load-modules.sh cdsymlinks.sh root-link.sh arch-udev-rules.patch
         readme-udev-arch.txt)
-md5sums=('59ebde702f1ab557be15ae76d645665b' '610f75f2b05437b14f3bc3418f8e7f65'\
-         '945f6d30ab458189b3c17f8e6722da1f' '8424b78e9dd772e75b4ef90814807815'\
-         '2d6dc6842464f107bccc68cd505a6c31' 'c17e075cc1806bf94a3678168ddec4e1'\
+md5sums=('a21a954bb1306bc9c6c3f27792c6e508' '610f75f2b05437b14f3bc3418f8e7f65'
+         '945f6d30ab458189b3c17f8e6722da1f' '8424b78e9dd772e75b4ef90814807815'
+         '2d6dc6842464f107bccc68cd505a6c31' 'c17e075cc1806bf94a3678168ddec4e1'
          '7fc6d33bb218e752302eef0a80ff0a89')
 
 build() {
