upgpkg: pixman 0.11.10-2     Fix FS#11419
git-svn-id: file:///srv/repos/svn-packages/svn@12276 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/pixman/trunk/PKGBUILD
+++ b/pixman/trunk/PKGBUILD
@@ -1,19 +1,26 @@
 # $Id$
-# Maintainer: Alexander Baldeck <alexander@archlinux.org>
+# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=pixman
 pkgver=0.11.10
-pkgrel=1
+pkgrel=2
 pkgdesc="Pixman library"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org"
 license=()
 depends=('glibc')
 options=('!libtool')
-source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('5db471bffc5caeebb6a07be674d65373')
+source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2
+	bug17477.patch
+	pixman_image_is_opaque.patch)
+md5sums=('5db471bffc5caeebb6a07be674d65373'
+         'b1e2cf02b382342fd37f2c0a8a30c82f'
+         '51e44e673949fce6967493df0f4ca965')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i ${srcdir}/bug17477.patch || return 1
+  patch -Np1 -i ${srcdir}/pixman_image_is_opaque.patch || return 1
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
