upgpkg: mono-zeroconf 0.7.6-4
git-svn-id: file:///srv/repos/svn-packages/svn@12285 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mono-zeroconf/trunk/PKGBUILD
+++ b/mono-zeroconf/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 
 pkgname=mono-zeroconf
 pkgver=0.7.6
-pkgrel=3
+pkgrel=4
 pkgdesc="A cross platform Zero Configuration Networking library for Mono and .NET."
 url="http://www.mono-project.com/Mono.Zeroconf"
 license=('GPL')
 arch=('i686' 'x86_64')
-depends=('mono>=1.9.1')
+depends=('mono>=1.9.1' 'avahi')
 options=('!makeflags')
 source=(http://banshee-project.org/files/mono-zeroconf/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('7c7c841d6e10ad803bb879511ab9747b')
