--- a/hal/trunk/PKGBUILD
+++ b/hal/trunk/PKGBUILD
@@ -18,10 +18,15 @@ source=(http://hal.freedesktop.org/releases/${pkgname}-${pkgver}.tar.bz2
 	hal-policy.patch
 	cryptsetup_location.patch
 	hal-0.5.9-hide-diagnostic.patch
-	ntfs3g-valid-options.patch)
-md5sums=('5e8935ab61bcb14afd2d4548084aace0' '277e96ac130d7bfce0b30f0b80db8782'\
-         '18dcdaa79952e2057c2e4745fbc8ad52' 'c688a3c6574699365926f4fef7441545'\
-         '4d4b6801a1cedca22b8bdd9db73b16fb' '4242a2c78885e396f639d0cd5e33218c')
+	ntfs3g-valid-options.patch
+	fix-udev-compatibility.patch)
+md5sums=('5e8935ab61bcb14afd2d4548084aace0'
+         '277e96ac130d7bfce0b30f0b80db8782'
+         '18dcdaa79952e2057c2e4745fbc8ad52'
+         'c688a3c6574699365926f4fef7441545'
+         '4d4b6801a1cedca22b8bdd9db73b16fb'
+         '4242a2c78885e396f639d0cd5e33218c'
+         '000573c32080fdc5846f44dafcf515b8')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -29,6 +34,8 @@ build() {
   patch -Np1 -i ${startdir}/src/cryptsetup_location.patch || return 1
   patch -Np1 -i ${startdir}/src/hal-0.5.9-hide-diagnostic.patch || return 1
   patch -Np0 -i ${startdir}/src/ntfs3g-valid-options.patch || return 1
+  # Fix compatibility with udev 126 and later
+  patch -Np1 -i ${startdir}/src/fix-udev-compatibility.patch || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
               --libexecdir=/usr/lib/hal --enable-static=no \
