upgpkg: ntp 4.2.4p5-1     update to 4.2.4p5, add --enable-linux-caps per #10324
git-svn-id: file:///srv/repos/svn-packages/svn@12344 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ntp/trunk/PKGBUILD
+++ b/ntp/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
 # Maintainer: dorphell <dorphell@archlinux.org>
 pkgname=ntp
-pkgver=4.2.4p4
-pkgrel=6
+pkgver=4.2.4p5
+pkgrel=1
 pkgdesc="NTP (Network Time Protocol) tries to keep servers in sync"
 arch=(i686 x86_64)
 license=('custom')
@@ -11,7 +11,7 @@ depends=('openssl>=0.9.8h' 'readline')
 backup=('etc/ntp.conf' 'conf.d/ntp-client.conf')
 source=(http://www.eecis.udel.edu/~ntp/ntp_spool/ntp4/ntp-${pkgver}.tar.gz \
         ftp://ftp.archlinux.org/other/ntp//ntp-4.2.0a-manpages.tar.bz2 ntp.conf ntp-client.conf ntpd ntpdate)
-md5sums=('fcb32a01e1ae3f9ed5bac86b12c7a1cc'
+md5sums=('eb647e07ecbd6e9e07bf8d3dc555490e'
          'd3a5a6185ef5ed71d2fa8e06598fc28f'
          '5bd3924f5720b97837969ec4ec4d5e09'
          'c7f50632b69bd4f32cf052d0b1848463'
@@ -23,7 +23,7 @@ build() {
   cd $startdir/src/$pkgname-$pkgver || return 1
 
   # configure
-  ac_cv_header_dns_sd_h=0 ./configure --prefix=/usr || return 1
+  ac_cv_header_dns_sd_h=0 ./configure --prefix=/usr --enable-linux-caps || return 1
 
   # build and install
   make || return 1
