upgpkg: xf86-input-synaptics 0.15.2-1     New upstream release Install hal fdi file so synaptics gets loaded for supported touchpads
git-svn-id: file:///srv/repos/svn-packages/svn@12352 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,28 +1,31 @@
 # $Id$
-# Maintainer: Tobias Powalowski  <tpowa@archlinux.org>
+# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Contributor: Tobias Powalowski  <tpowa@archlinux.org>
 # Contributor: Thomas Bächler <thomas@archlinux.org>
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=xf86-input-synaptics
-pkgver=0.15.0
+pkgver=0.15.2
 pkgrel=1
 pkgdesc="synaptics driver for notebook touchpads"
 arch=(i686 x86_64)
 license=('custom')
 url="http://w1.894.telia.com/~u89404340/touchpad/"
 depends=('libx11')
-makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+makedepends=('pkgconfig' 'xorg-server>=1.5')
 replaces=('synaptics')
 provides=('synaptics')
 conflicts=('synaptics')
 options=(!libtool)
 source=(http://xorg.freedesktop.org/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('939f1c831c5cd3a6f027e982592dfc5b')
+md5sums=('54565b65d115e8659ea061ef32809ed2')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
+  install -d "${pkgdir}/usr/share/hal/fdi/policy/10osvendor"
+  install -m644 fdi/*.fdi "${pkgdir}/usr/share/hal/fdi/policy/10osvendor/" || return 1
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
 }
