--- a/openssh/trunk/PKGBUILD
+++ b/openssh/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=openssh
-pkgver=5.0p1
-pkgrel=2
+pkgver=5.1p1
+pkgrel=1
 #_gsskexver=20080404
 pkgdesc='A Secure SHell server/client'
 arch=(i686 x86_64)
@@ -15,10 +15,8 @@ depends=('openssl>=0.9.8g' 'zlib' 'pam' 'tcp_wrappers' 'heimdal>=1.2-1')
 source=(ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/$pkgname-$pkgver.tar.gz
         sshd sshd.confd sshd.pam)
         #http://www.sxw.org.uk/computing/patches/$pkgname-$pkgver-gsskex-$_gsskexver.patch
-md5sums=('1f1dfaa775f33dd3328169de9bdc292a'
-         'd9ee5e0a0d143689b3d6f11454a2a892'
-         'e2cea70ac13af7e63d40eb04415eacd5'
-         '1c7c2ea8734ec7e3ca58d820634dc73a')
+md5sums=('03f2d0c1b5ec60d4ac9997a146d2faec' 'd9ee5e0a0d143689b3d6f11454a2a892'
+         'e2cea70ac13af7e63d40eb04415eacd5' '1c7c2ea8734ec7e3ca58d820634dc73a')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
@@ -49,13 +47,17 @@ build() {
   install -D -m755 contrib/ssh-copy-id $startdir/pkg/usr/bin/ssh-copy-id
   install -D -m644 contrib/ssh-copy-id.1  $startdir/pkg/usr/man/man1/ssh-copy-id.1
 
-  #adjust our config files
+  i# sshd_config
   sed -i \
     -e 's|^#ListenAddress 0.0.0.0|ListenAddress 0.0.0.0|g' \
     -e 's|^#UsePAM no|UsePAM yes|g' \
     -e 's|^#ChallengeResponseAuthentication yes|ChallengeResponseAuthentication no|g' \
     $startdir/pkg/etc/ssh/sshd_config
-  sed -i -e 's|^# Host \*|Host *|g' $startdir/pkg/etc/ssh/ssh_config
   echo "HashKnownHosts yes" >>  $startdir/pkg/etc/ssh/ssh_config
   echo "StrictHostKeyChecking ask" >>  $startdir/pkg/etc/ssh/ssh_config
+
+  #ssh_config
+  sed -i \
+    -e 's|^# Host \*|Host *|g' \
+    $startdir/pkg/etc/ssh/ssh_config
 }
