update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12369 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-sr/trunk/PKGBUILD
+++ b/kde-l10n-sr/trunk/PKGBUILD
@@ -10,8 +10,10 @@ url='http://www.kde.org'
 license=('GPL')
 replaces=('kde-i18n-sr')
 provides=('kde-i18n-sr')
+depends=('xdg-utils')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kde-l10n-sr.install'
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('b29bc82068ac7d3443fffe924356a7fd')
 
