update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12370 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeaccessibility/trunk/PKGBUILD
+++ b/kdeaccessibility/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdelibs')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime')
 options=('docs')
+install='kdeaccessibility.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('2e81aad070229a802630721cc6a4c44a')
 
