update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12371 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdeadmin.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e6693bcbe96bb9453e79bd3201d8f757')
 
