update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12372 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebase/trunk/PKGBUILD
+++ b/kdebase/trunk/PKGBUILD
@@ -13,6 +13,7 @@ depends=('libraw1394' 'kdebase-runtime' 'qimageblitz')
 makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4')
 optdepends=('kdebase-workspace')
 options=('docs')
+install='kdebase.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('33ab20f61aa33ed473fec710ad250ac7')
 
